docs/tests/parser/interface/valid/InterfaceWithVarDecl.src
interface IHasValue {
    let int value;
    fn int getValue();
}
