docs/tests/parser/interface/invalid/InterfaceWithStruct.src
interface IFoo {
    struct Bar {
        let int x;
    }
}
